<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LobbyActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lobbyTitle"
            android:textSize="24sp" />

        <Button
            android:id="@+id/tact_file_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_experiment" />

        <Button
            android:id="@+id/scan_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan"/>
        <Button
            android:id="@+id/ping_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ping_all"/>

        <TextView
            android:text="@string/deviceListTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <ListView
            android:id="@+id/deviceListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>